tdf#105600 rework section selection from Navigator

Corrects selection behavior when the section is empty or has
a single empty line before a table. Also, doesn't suffer the SelAll
function use selection misbehaviors when a table is at the start of the
document, other than for the case of a section containing a table at the
start of document, in which case, neither this rework nor SelAll
function selects the section.

Change-Id: Ibdefa0af417fc3c3262acaa1977fec811c8f24e8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90181
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>